<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".7"
    android:background="@drawable/mobile"
    android:orientation="vertical"
    tools:context="com.example.dell.justjava.MainActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:alpha=".7"
        android:background="#000"
        android:fontFamily="@font/alegreya_sans_sc_extrabold"
        android:padding="5dp"
        android:text="@string/q"
        android:textAllCaps="true"
        android:textColor="#ff0011"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addbutton"
        android:layout_marginTop="30dp"
        android:alpha=".7"
        android:background="#000"
        android:fontFamily="@font/alegreya_sans_sc_extrabold"
        android:text="@string/n"
        android:textAlignment="center"
        android:textColor="#ff0011"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:alpha=".7"
        android:background="#000"
        android:fontFamily="@font/alegreya_sans_sc_extrabold"
        android:padding="5dp"
        android:text="@string/p"
        android:textAllCaps="true"
        android:textColor="#ff0004"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/checkout"
        android:layout_toRightOf="@+id/checkout"
        android:alpha=".7"
        android:fontFamily="@font/alegreya_sans_sc_extrabold"
        android:padding="5dp"
        android:text="@string/costofeachcup"
        android:textColor="#ff0004"
        android:textSize="10sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="13dp"
        android:onClick="add"
        android:padding="15dp"
        android:text="@string/addbutton"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/removebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_marginTop="13dp"
        android:onClick="minus"
        android:padding="15dp"
        android:text="@string/removebutton"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/checkt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha=".7"
        android:background="#000"
        android:fontFamily="cursive"
        android:text="@string/nd"
        android:textAlignment="center"
        android:textColor="#ff0004"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="33dp"
        android:onClick="checkout"
        android:padding="15dp"
        android:text="@string/checkout"
        android:fontFamily="@font/alegreya_sans_sc_extrabold"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkout"
        android:layout_marginTop="16dp"
        android:alpha=".7"
        android:background="#000"
        android:fontFamily="@font/alegreya_sans_sc_extrabold"
        android:text="@string/d"
        android:textAlignment="center"
        android:textColor="#ff0004"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>
